--- a/Task01/DASH.html
+++ b/Task01/DASH.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>SMART HEALTHCARE DASHBOARD</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <header> KIMS HOSPITAL </header>
