popup boxes completed

--- a/Task01/DASH.html
+++ b/Task01/DASH.html
@@ -4,15 +4,15 @@
     <title>SMART HEALTHCARE DASHBOARD</title>
      <link rel="stylesheet" href="Style.css">
 </head>
-<body>
-    <header> KIMS HOSPITAL </header>
+<body onload="showAlert();weluser();">
+    <header> MSR HOSPITAL </header>
     <header> Smart HealthCare Dashboard </header>
     <div class="container">
         <div class="sidebar">
             <h3> MENU </h3>
             <ul>
-                <a href="C:\Users\Sowjanya\Desktop\myfolder\table.html"><li>Dashboard</li></a>
-                <a href="C:\Users\Sowjanya\Desktop\karii\__pycache__\patient.html"><li>Patients</li></a>
+                <li>Dashboard</li>
+                <a href="C:\Users\Sowjanya\Desktop\WTLab_sowjanya\Task01\patient.html"><li>Patients</li></a>
                 <li>Appointments</li>
                 <li>Reports</li>
             </ul>
@@ -24,7 +24,7 @@
                 <div class="card">Temperature<br><b>98.6F</b></div>
                 <div class="card">Oxygen Level<br><b>97%</b></div>
             </div>
-            <table>
+            <table id="ptabs">
                 <tr>
                     <th>NAME</th>
                     <th>AGE</th>
@@ -113,10 +113,25 @@
                 <tr></tr>
                 <tr></tr>
             </table>
+             <script src="C:\Users\Sowjanya\Desktop\WTLab_sowjanya\Task01\smart.js"></script>
         </div>
     </div>
     <h2><u>FORM FOR APPOINTMENT</u></h2>
-    <p> click here </p>
+    <p><u>Instructios to fill the form:</u>
+        <br>
+        <br>
+        1)<a href="C:\Users\Sowjanya\Desktop\WTLab_sowjanya\Task01\Appoint.html"> click here </a> to get the Appointment.
+        <br>
+        <br>
+        2)First fill correct details of the patient.
+        <br>
+        <br>
+        3)After filling all the data...click BOOK APPOINTMENT button.
+        <br>
+        <br>
+        4)Appointment booked successfully!!
+    </p>
+   
 
 </body>
 </html>
